force-app/main/default/objects/Service_Contract__c/fields/Current_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Current_Odometer__c</fullName>
    <label>Current Odometer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>