force-app/main/default/objects/Service_Contract__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>