force-app/main/default/objects/Service_Contract__c/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <formula>Customer_Account__r.VIN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN Number</label>
    <type>Text</type>
</CustomField>